Fix scrollbar style

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,8 @@
 }
 
 html {
-  scrollbar-width: thin;
+  /* scrollbar-width: thin; */
+  /* scrollbar-color: rgba(205, 205, 205) green; */
   -webkit-tap-highlight-color: transparent;
   /* TODO */
   /* scrollbar-gutter: stable; */
@@ -33,11 +34,19 @@ body::-webkit-scrollbar,
 body::-webkit-scrollbar-thumb {
   width: 12px;
   height: 12px;
-  border-radius: 2px;
+  border-radius: 0px;
 }
 
 ::-webkit-scrollbar {
   background: transparent;
+}
+
+body::-webkit-scrollbar {
+  background: rgb(255, 255, 255);
+}
+
+html[data-mui-color-scheme="dark"] body::-webkit-scrollbar {
+  background: rgb(60, 60, 60);
 }
 
 ::-webkit-scrollbar-thumb {
